# meeting-transcriber

./: .gitignore  CLAUDE.md  Makefile  PRD.md  README.md  pyproject.toml  setup.py
.interface-design/: system.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-export-multi-provider/: 01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-system-audio-capture/: 02-01-SUMMARY.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
design/: tokens_dark.json  tokens_light.json
docs/: architecture.md  code-rules.md  design-tokens.md  learnings.md  socratic-review.md
resources/: AppIcon.icns
scripts/: auto_review.py  generate_icon.py  phase_gate_check.py
src/meeting_transcriber/: __init__.py  app.py
tests/: conftest.py  test_ai_provider.py  test_analysis_store.py  test_audio_capture.py  test_blackhole_wizard.py  test_config.py  test_constants.py  test_cross_meeting.py  test_diarizer.py  test_exporter.py  test_file_importer.py  test_keychain.py  test_main_window.py  test_meeting_detector.py  test_metadata_index.py  test_model_manager.py  test_onboarding.py  test_overlay.py  test_settings_dialog.py  test_shortcuts.py  test_sidebar.py  test_storage.py  test_system_audio.py  test_system_audio_toggle.py  test_templates.py  test_transcriber.py  test_tray.py  test_workspace.py
(+121 files in other folders)
